--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     </div>
 
     <script src='main.js'></script>
+    <script type="text/javascript" src="https://otpless.com/auth.js"></script>
+<!-- Get user's whatsapp number and name -->
+<script type="text/javascript">
+  function otpless(otplessUser) {
+   var waName = otplessUser.waName;
+   var waNumber = otplessUser.waNumber;
+   // Signup/signin the user and redirect to next page
+  }
+</script>
 
 </body>
 </html>
